POM: Set scope to provided for spring-boot-autoconfigure, jetty-server

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -99,6 +100,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
