--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>cz.jirutka.spring</groupId>
     <artifactId>spring-boot-servlet-inherit-channel</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <name>Spring Boot Servlet Inherit Channel</name>
