--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -95,6 +96,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
